Fix too tall button in dialogue

--- a/src/components/dialogue/dialogue.scss
+++ b/src/components/dialogue/dialogue.scss
@@ -82,7 +82,7 @@
       transform: translateY(-64px);
       overflow: auto;
       height: calc(100vh - 176px);
-      :last-child {
+      > :last-child {
         margin-bottom: 128px;
       }
     }
